deployment/pomerium/base/pomerium.ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: pomerium
  labels:
    istio-injection: enabled
    argocd.argoproj.io/instance: pomerium-kustomize
